# xbmc-client

./: init.hs  testJson.hs  xbmc-client.cabal  xbmc.hs
